kubernetes-loadbalancer/vue-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vue-app
  template:
    metadata:
      labels:
        app: vue-app
    spec:
      containers:
        - name: vue-app
          image: nathansegers/vue-docker
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: svc-vue-app
spec:
  selector:
    app: vue-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
