kubernetes-loadbalancer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-router
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.priority: "10"
spec:
  ingressClassName: traefik
  rules:
    - host: nginx.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-nginx
                port:
                  number: 80
    - host: vue.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-vue-app
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-router-default
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.priority: "9"
spec:
  ingressClassName: traefik
  defaultBackend:
    service:
      name: svc-default-backend
      port:
        number: 80
